# prysm

./: WORKSPACE
beacon-chain/blockchain/: BUILD.bazel  service_test.go
beacon-chain/core/blocks/: block.go
beacon-chain/rpc/: service.go
beacon-chain/simulator/: BUILD.bazel  service.go  service_test.go
beacon-chain/sync/: BUILD.bazel  regular_sync.go  service_test.go
beacon-chain/sync/initial-sync/: BUILD.bazel  service.go  service_test.go
beacon-chain/types/: interfaces.go
contracts/validator-registration-contract/: BUILD.bazel
contracts/validator-registration-contract/deployVRC/: BUILD.bazel
contracts/validator-registration-contract/testutils/: BUILD.bazel  testsetup.go
k8s/: README.md  ingress.yaml
k8s/beacon-chain/: beacon-chain.deploy.yaml
k8s/contracts/: BUILD.bazel  deploy_vrc.job.yaml
k8s/geth/: BUILD.bazel  blockscout-init.job.yaml  blockscout.deploy.yaml  blockscout.service.yaml  bootnode.deploy.yaml  bootnode.service.yaml  ethstats.service.yaml  faucet.deploy.yaml  faucet.secret.yaml  faucet.service.yaml  miners.deploy.yaml  nodes.deploy.yaml  nodes.service.yaml
k8s/nginx/: deployment.yaml
k8s/tools/: BUILD.bazel  deploy-validator-registration-contract.job.yaml
k8s/validator/: BUILD.bazel  validator.deploy.yaml
proto/validator-pubkey-manager/v1/: BUILD.bazel  services.proto
shared/hashutil/: BUILD.bazel
shared/p2p/: BUILD.bazel  options.go  service.go  service_test.go
shared/p2p/bootstrap-node/: BUILD.bazel  main.go
shared/p2p/relay-node/: BUILD.bazel  main.go
tools/beacon-blackbox/: BUILD.bazel  main.go
tools/beacon-querier/: BUILD.bazel  main.go
tools/validator-pubkey-manager/client/: BUILD.bazel  main.go
tools/validator-pubkey-manager/server/: BUILD.bazel  deposit.go  deposit_test.go  kubernetes.go  main.go  pubkey-generator.go  server.go  storage.go
validator/beacon/: service.go
validator/node/: BUILD.bazel  node.go
validator/validator/: BUILD.bazel  service.go  service_test.go
