package(default_visibility = ["//k8s:__subpackages__"])

load("@k8s_pod//:defaults.bzl", "k8s_pod")
load("@k8s_job//:defaults.bzl", "k8s_job")

k8s_pod(
    name = "busybox.pod",
    template = "busybox.yaml",
)

k8s_job(
    name = "deploy-validator-registration-contract.job",
    template = "deploy-validator-registration-contract.job.yaml",
)
