load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["service_test.go"],
    embed = [":go_default_library"],
    deps = ["//shared:go_default_library"],
)

go_library(
    name = "go_default_library",
    srcs = ["service.go"],
    importpath = "github.com/prysmaticlabs/prysm/validator/validator",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/beacon/rpc/v1:go_default_library",
        "//shared/p2p:go_default_library",
        "//shared/params:go_default_library",
        "//shared/slotticker:go_default_library",
        "@com_github_gogo_protobuf//types:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//connectivity:go_default_library",
    ],
)
