load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    testonly = True,
    srcs = ["testsetup.go"],
    importpath = "github.com/prysmaticlabs/prysm/contracts/validator-registration-contract/testutils",
    visibility = ["//visibility:public"],
    deps = [
        "//contracts/validator-registration-contract:go_default_library",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind:go_default_library",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind/backends:go_default_library",
        "@com_github_ethereum_go_ethereum//common:go_default_library",
        "@com_github_ethereum_go_ethereum//core:go_default_library",
        "@com_github_ethereum_go_ethereum//crypto:go_default_library",
    ],
)
