load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_proto_library(
    name = "v1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/prysmaticlabs/prysm/proto/validator-pubkey-manager/v1",
    proto = ":ethereum_validatorpubkeymanager_v1_proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/beacon/rpc/v1:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":v1_go_proto"],
    importpath = "github.com/prysmaticlabs/prysm/proto/validator-pubkey-manager/v1",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "ethereum_validatorpubkeymanager_v1_proto",
    srcs = ["services.proto"],
    visibility = ["//visibility:public"],
    deps = ["//proto/beacon/rpc/v1:v1_proto"],
)
